test/src/e2e_vm_tests/test_programs/should_fail/calling_context_internal_only_in_script/src/main.sw
script;

#[context(internal_only)]
fn bar() {}

#[context(internal_only)]
fn baz() {
  bar();
}

#[context(internal_only)]
fn main() {
  baz();
}
